--- a/public_html/home.css
+++ b/public_html/home.css
@@ -4,3 +4,19 @@
  * Class: CSC337
  */
 
+h1 {
+  padding: 10px;
+}
+
+form {
+  margin: 25px 10px;
+}
+
+label {
+  display: inline-block;
+  width: 130px;
+}
+
+.in-field {
+  padding: 10px;
+}
